[project]
name = "dagr"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.10.0"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.16.2"
torch-scatter = {version = "^2.1.2", source = "pytorch-geometric"}
torch-sparse = {version = "^0.6.18", source = "pytorch-geometric"}
torch-cluster = {version = "^1.6.3", source = "pytorch-geometric"}
torch-spline-conv = {version = "^1.2.2", source = "pytorch-geometric"}
torch-geometric = "^2.6.1"
torch = "2.6"
torchaudio = "2.6"
torchvision = "0.21"
scikit-video = "^1.1.11"
setuptools = "^80.9.0"
mkl = "^2025.2.0"
h5py = "^3.14.0"
tqdm = "^4.67.1"
wandb = "^0.22.1"
numba = "^0.62.1"
numpy = "^2.2"
hdf5plugin = "^5.1.0"
plotly = "^6.3.1"
matplotlib = "^3.10.6"
pycocotools = "^2.0.10"
opencv-python = "^4.12.0.88"
pandas = "^2.3.3"
ruamel-yaml = "^0.18.15"
dsec-det = {path = "libs/dsec-det"}
onnx-simplifier = "^0.4.36"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[[tool.poetry.source]]
name = "pytorch-geometric"
url = "https://pytorch-geometric.com/whl/torch-2.6.0+cpu.html"
